[gd_scene load_steps=35 format=2]

[ext_resource path="res://Player/Player/body_down.png" type="Texture" id=1]
[ext_resource path="res://Player/LaserGun/LaserGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Player/Player/fire1.png" type="Texture" id=4]
[ext_resource path="res://Player/Player/fire2.png" type="Texture" id=5]
[ext_resource path="res://Player/Player/Flame1.gd" type="Script" id=6]
[ext_resource path="res://Player/Player/Flame5.gd" type="Script" id=7]
[ext_resource path="res://Player/Player/Flame7.gd" type="Script" id=8]
[ext_resource path="res://Player/Player/Flame6.gd" type="Script" id=9]
[ext_resource path="res://Player/Player/Flame8.gd" type="Script" id=10]
[ext_resource path="res://Player/Player/Flame4.gd" type="Script" id=11]
[ext_resource path="res://Player/Player/Flame2.gd" type="Script" id=12]
[ext_resource path="res://Player/Player/Flame9.gd" type="Script" id=13]
[ext_resource path="res://Player/Player/head_down.png" type="Texture" id=14]

[sub_resource type="CapsuleShape2D" id=7]
radius = 13.2918
height = 39.3226

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.203922, 0.196078, 0.258824, 1 )
border_color = Color( 0.117647, 0.509804, 0.0509804, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.823529, 0.309804, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.533333, 0.866667, 0.203922, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=4]
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 5 )
ProgressBar/styles/fg = SubResource( 6 )

[sub_resource type="Animation" id=8]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -54.0908 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -54.0908 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -54.0908 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.674445, 0.674445 ), Vector2( 0.674, 0.505 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 94.6611, -67.6152 ), Vector2( 94.6611, -108.184 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 94.6611, -67.6152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.674445, 0.674445 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.674445, 0.674445 ), Vector2( 0.674, 0.505 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 94.6611, -67.6152 ), Vector2( 94.6611, -108.184 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 94.6611, -67.6152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.674445, 0.674445 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.674445, 0.674445 ), Vector2( 0.674, 0.505 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 94.6611, -67.6152 ), Vector2( 94.6611, -108.184 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 94.6611, -67.6152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.674445, 0.674445 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.674445, 0.674445 ), Vector2( 0.674, 0.505 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 94.6611, -67.6152 ), Vector2( 94.6611, -108.184 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 94.6611, -67.6152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.674445, 0.674445 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -54.0908 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 960, 540 )
scale = Vector2( 2, 2 )
collision_mask = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 598.0, 600.0 ]
}

[node name="CollisionShape" type="CollisionShape2D" parent="."]
scale = Vector2( 1.04387, 0.84969 )
shape = SubResource( 7 )

[node name="LifeBar" type="ProgressBar" parent="."]
margin_left = -33.0
margin_top = -57.5
margin_right = 67.0
margin_bottom = -43.5
rect_scale = Vector2( 0.663739, 0.663739 )
theme = SubResource( 4 )
value = 40.0
percent_visible = false

[node name="Fire" type="Node2D" parent="."]
position = Vector2( 0, -6.5 )
scale = Vector2( 1.22, 1.22 )

[node name="Flame1" type="Node2D" parent="Fire"]
position = Vector2( -5.5, 30.5 )
scale = Vector2( 0.0548805, 0.0548805 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Fire/Flame1"]
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire/Flame1"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Flame5" type="Node2D" parent="Fire"]
position = Vector2( 2.5, 31.5 )
scale = Vector2( 0.0548805, 0.0548805 )
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Fire/Flame5"]
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire/Flame5"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="Flame7" type="Node2D" parent="Fire"]
position = Vector2( 7.5, 29 )
scale = Vector2( 0.0548805, 0.0548805 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Fire/Flame7"]
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire/Flame7"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 22 )
anims/RESET = SubResource( 23 )

[node name="Flame2" type="Node2D" parent="Fire"]
position = Vector2( -13, 34 )
scale = Vector2( 0.0473888, 0.0473888 )
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="Fire/Flame2"]
position = Vector2( 94.6611, -67.6152 )
scale = Vector2( 0.674445, 0.674445 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire/Flame2"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Flame6" type="Node2D" parent="Fire"]
position = Vector2( 1, 32 )
scale = Vector2( 0.0473888, 0.0473888 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Fire/Flame6"]
position = Vector2( 94.6611, -67.6152 )
scale = Vector2( 0.674445, 0.674445 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire/Flame6"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 16 )
anims/RESET = SubResource( 17 )

[node name="Flame8" type="Node2D" parent="Fire"]
position = Vector2( 4, 30 )
scale = Vector2( 0.0473888, 0.0473888 )
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Fire/Flame8"]
position = Vector2( 94.6611, -67.6152 )
scale = Vector2( 0.674445, 0.674445 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire/Flame8"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 24 )
anims/RESET = SubResource( 25 )

[node name="Flame4" type="Node2D" parent="Fire"]
position = Vector2( -5, 36 )
scale = Vector2( 0.0473888, 0.0473888 )
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="Fire/Flame4"]
position = Vector2( 94.6611, -67.6152 )
scale = Vector2( 0.674445, 0.674445 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire/Flame4"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="Flame9" type="Node2D" parent="Fire"]
position = Vector2( -3, 33 )
scale = Vector2( 0.0548805, 0.0548805 )
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="Fire/Flame9"]
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire/Flame9"]
root_node = NodePath("../../Flame9")
autoplay = "New Anim"
"anims/New Anim" = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="BodySprite" type="Sprite" parent="."]
position = Vector2( 0, -0.5 )
scale = Vector2( 0.0383281, 0.0382684 )
texture = ExtResource( 1 )

[node name="LaserGun" parent="." instance=ExtResource( 2 )]
position = Vector2( 29, 0 )

[node name="HeadSprite" type="Sprite" parent="."]
scale = Vector2( 0.038, 0.038 )
texture = ExtResource( 14 )
